--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "hally": {
+    "Hally": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/hally",
+            "outputPath": "dist/Hally",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -47,25 +47,32 @@
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
             }
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "hally:build"
+            "browserTarget": "Hally:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "hally:build:production"
+              "browserTarget": "Hally:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "hally:build"
+            "browserTarget": "Hally:build"
           }
         },
         "test": {
@@ -99,15 +106,21 @@
         }
       }
     },
-    "hally-e2e": {
+    "Hally-e2e": {
       "root": "e2e/",
       "projectType": "application",
+      "prefix": "",
       "architect": {
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "hally:serve"
+            "devServerTarget": "Hally:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "Hally:serve:production"
+            }
           }
         },
         "lint": {
@@ -122,5 +135,5 @@
       }
     }
   },
-  "defaultProject": "hally"
+  "defaultProject": "Hally"
 }
